JAVAROOT = $(top_builddir)/java
CLASSPATH_ENV = CLASSPATH=@CLASSPATH@

dist_java_JAVA =  \
	CellListener.java \
	ColumnComparator.java \
	FileSystemPanel.java \
	LwatchAlert.java \
	LWatch.java \
	MDSPanel.java \
	OSSPanel.java \
	OSTPanel.java \
	PlotFrame2.java \
	Prefs.java \
	PrefsModifier.java \
	RawLiveParams.java \
	RTRPanel.java \
	TextFormatter.java
